crates/monochange_cli/tests/snapshots/release_pull_requests__open_release_pull_request_dry_run_matches_snapshot@group.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "Cargo.toml",
      "changelog.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "[multiline text]"
              ],
              "title": "🚀 Feature"
            }
          ],
          "summary": [
            "Grouped release for `sdk`."
          ],
          "title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])"
        },
        "owner_id": "sdk",
        "owner_kind": "group",
        "path": "changelog.md",
        "rendered": "[multiline text]"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add feature"
              ],
              "title": "🚀 Feature"
            }
          ],
          "summary": [],
          "title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])"
        },
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": true,
            "commit_web_urls": true,
            "issue_comments": true,
            "related_issues": true,
            "review_request_lookup": true
          },
          "host": "github.com",
          "introduced": null,
          "last_updated": null,
          "provider": "github",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add feature",
        "targets": [
          {
            "bump": "minor",
            "change_type": "minor",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": "1.1.0",
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/app/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`",
            "shares version group `sdk`"
          ],
          "trigger": "version-group-synchronization",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "add feature",
            "shares version group `sdk`"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [
        {
          "bump": "minor",
          "id": "sdk",
          "members": [
            "cargo:crates/core/Cargo.toml",
            "cargo:crates/app/Cargo.toml"
          ],
          "planned_version": "1.1.0"
        }
      ],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "sdk",
        "kind": "group",
        "members": [
          "core",
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "[1.1.0](https://github.com/ifiokjr/monochange/releases/tag/v1.1.0) ([DATE])",
        "rendered_title": "1.1.0 ([DATE])",
        "tag": true,
        "tag_name": "v1.1.0",
        "version": "1.1.0",
        "version_format": "primary"
      }
    ],
    "released_packages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": {
    "auto_merge": false,
    "base_branch": "main",
    "body": "[multiline text]",
    "commit_message": {
      "body": "[multiline text]",
      "subject": "chore(release): prepare release"
    },
    "head_branch": "monochange/release/release-pr",
    "labels": [
      "release",
      "automated"
    ],
    "owner": "ifiokjr",
    "provider": "github",
    "repo": "monochange",
    "repository": "ifiokjr/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
