crates/monochange_cli/tests/snapshots/release_pull_requests__open_release_pull_request_dry_run_matches_snapshot@ungrouped.snap
---
source: crates/monochange/tests/release_pull_requests.rs
expression: redacted
---
{
  "issue_comments": [],
  "manifest": {
    "changed_files": [
      "crates/app/CHANGELOG.md",
      "crates/app/Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "- No package-specific changes were recorded; `workflow-app` was updated to 1.0.1."
              ],
              "title": "Changed"
            }
          ],
          "summary": [],
          "title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) ([DATE])"
        },
        "owner_id": "app",
        "owner_kind": "package",
        "path": "crates/app/CHANGELOG.md",
        "rendered": "[multiline text]"
      },
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add feature"
              ],
              "title": "🚀 Feature"
            }
          ],
          "summary": [],
          "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
        },
        "owner_id": "core",
        "owner_kind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actor_profiles": true,
            "commit_web_urls": true,
            "issue_comments": true,
            "related_issues": true,
            "review_request_lookup": true
          },
          "host": "github.com",
          "introduced": null,
          "last_updated": null,
          "provider": "github",
          "related_issues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add feature",
        "targets": [
          {
            "bump": "minor",
            "change_type": "minor",
            "evidence_refs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deleted_changesets": [],
    "dry_run": true,
    "group_version": null,
    "package_publications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "app",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      },
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trusted_publishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibility_evidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/app/Cargo.toml",
          "planned_version": "1.0.1",
          "reasons": [
            "depends on `cargo:crates/core/Cargo.toml`"
          ],
          "trigger": "transitive-dependency",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        },
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "planned_version": "1.1.0",
          "reasons": [
            "add feature"
          ],
          "trigger": "direct-change",
          "upstream_sources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolved_items": [],
      "warnings": [],
      "workspace_root": "."
    },
    "release_targets": [
      {
        "id": "app",
        "kind": "package",
        "members": [
          "app"
        ],
        "release": true,
        "rendered_changelog_title": "app [1.0.1](https://github.com/ifiokjr/monochange/releases/tag/app/v1.0.1) ([DATE])",
        "rendered_title": "app 1.0.1 ([DATE])",
        "tag": false,
        "tag_name": "app/v1.0.1",
        "version": "1.0.1",
        "version_format": "namespaced"
      },
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "rendered_changelog_title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])",
        "rendered_title": "core 1.1.0 ([DATE])",
        "tag": true,
        "tag_name": "core/v1.1.0",
        "version": "1.1.0",
        "version_format": "namespaced"
      }
    ],
    "released_packages": [
      "workflow-app",
      "workflow-core"
    ],
    "version": null
  },
  "package_publish": null,
  "publish_rate_limits": null,
  "release_commit": null,
  "release_request": {
    "auto_merge": true,
    "base_branch": "develop",
    "body": "[multiline text]",
    "commit_message": {
      "body": "[multiline text]",
      "subject": "chore(release): prepare release"
    },
    "head_branch": "automation/release/release-pr",
    "labels": [
      "release",
      "automated",
      "preview"
    ],
    "owner": "ifiokjr",
    "provider": "github",
    "repo": "monochange",
    "repository": "ifiokjr/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
